--- a/analysis/readme.me
+++ b/analysis/readme.me
@@ -1,1 +1,137 @@
+# Network Analysis Report  
+### DNS | TCP Handshake | HTTP | ARP | TLS  
 
+---
+
+## 1. Introduction
+This report summarizes the results of a Wireshark network capture session.  
+It includes analysis of five essential protocols relevant to cybersecurity investigations:
+
+- *DNS*
+- *TCP (3-Way Handshake)*
+- *HTTP*
+- *ARP*
+- *TLS/HTTPS*
+
+These observations reflect normal network behavior and demonstrate foundational packet analysis skills.
+
+---
+
+## 2. DNS Traffic Analysis
+
+### Summary
+DNS converts human-readable domain names into IP addresses.  
+The capture demonstrates a standard DNS query and response.
+
+### Key Observations
+- The client sent a *DNS A/AAAA query* to resolve a domain (example: example.com).  
+- The DNS server responded with a valid IP address.  
+- Traffic used *UDP port 53*.  
+- No retransmissions or malformed packets observed.
+
+### Security Notes
+- No suspicious queries.  
+- No signs of DNS tunneling or flooding.  
+
+---
+
+## 3. TCP 3-Way Handshake Analysis
+
+### Summary
+TCP uses a 3-step handshake to establish reliable communication.
+
+### Key Observations
+- Captured the full sequence:  
+  - *SYN* (client → server)  
+  - *SYN/ACK* (server → client)  
+  - *ACK* (client → server)  
+- Sequence and acknowledgment values were valid.  
+- No retransmissions, resets, or anomalies.
+
+### Security Notes
+- No evidence of SYN flood attempts.  
+- No spoofed or malformed handshake packets.
+
+---
+
+## 4. HTTP Traffic Analysis
+
+### Summary
+An HTTP GET request was captured from an unencrypted site like neverssl.com.
+
+### Key Observations
+- Visible *HTTP GET request* with standard headers:  
+  - Host  
+  - User-Agent  
+  - Accept  
+- Server returned *HTTP/1.1 200 OK* with HTML content.  
+- Traffic used *TCP port 80*.
+
+### Security Notes
+- No unusual redirects or payloads.  
+- Shows why unencrypted HTTP exposes data to attackers.
+
+---
+
+## 5. ARP Broadcast Analysis
+
+### Summary
+ARP maps IP addresses to MAC addresses inside a local network.
+
+### Key Observations
+- Broadcast *ARP Request* asking for the MAC address of a specific IP.  
+- *ARP Reply* confirmed the mapping.  
+- Behavior aligned with normal LAN discovery.
+
+### Security Notes
+- No signs of ARP spoofing or MITM attempts.  
+- No excessive or abnormal ARP activity.
+
+---
+
+## 6. TLS / HTTPS Traffic Analysis
+
+### Summary
+TLS encrypts communications on the web.  
+The captured packets show a complete TLS handshake.
+
+### Key Observations
+- *Client Hello* contained cipher suites and TLS version.  
+- *Server Hello* selected a cipher suite.  
+- Server presented a valid certificate.  
+- Traffic transitioned to encrypted application data.
+
+### Security Notes
+- TLS versions observed: *1.2 or 1.3* (secure).  
+- Certificate matched the domain.  
+- No downgrade attacks or weak cipher use detected.
+
+---
+
+## 7. Conclusion
+The analyzed packets reflect normal and healthy network behavior.  
+This analysis demonstrates understanding of:
+
+- Protocol behavior  
+- Packet structure  
+- Network communication  
+- Wireshark filtering  
+- Security observations  
+
+These skills support SOC Tier 1 investigations and cybersecurity fundamentals.
+
+---
+
+## Related Files (Screenshots Stored in /docs)
+- dns_lookup.png
+- tcp_handshake.png
+- http_or_tls.png
+- arp_broadcast.png
+- suspicious_packet.png (optional)
+
+---
+
+## Author
+*Alex Ojo*  
+Cybersecurity Student | Google Cybersecurity Certified  
+GitHub: *@alexojocyber*
